# bl0g

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  LICENSE  README.md  deny.toml  docker-compose.yml  fly.toml  justfile  kube-deployment.yaml  tailwind.config.js  tailwind.css
.github/workflows/: CI.yml  general.yml
assets/: output.css  robots.txt  styles.css
assets/game/: my_bevy.d.ts  my_bevy.js  my_bevy_bg.wasm.d.ts
assets/js/: htmx.min.js
config/: base.yml
content/: cv.typ  cv.yml
content/posts/: a_new_flow.md  a_rust_blog_with_axum_htmx_and_cloudflare.md  a_solo_engineer_dreams_an_mvc.md  browser_history_with_htmx.md  concurrent_rust.md  if_an_ai_could_speak.md  rereading_rust.md  streaming_html_bodies_with_axum.md  to_the_ships,_philosophers!.md
content/projects/: gathering-surf.yml  gigiioo.yml  kopps.yml  monkey.yml  peach-profiler.yml  personal-site.yml
data/posts/: a_rust_blog_with_axum_htmx_and_cloudflare.md  a_solo_engineer_dreams_an_mvc.md  concurrent_rust.md  hello_world.md  if_an_ai_could_speak.md  to_the_ships,_philosophers!.md
data/projects/: fishy-edge.yml  fishy-ql.yml  fishy-qwik.yml  gigiioo.md  gigiioo.yml
posts/: browser_history_with_htmx.md  concurrent_rust.md  hello_world.md  post.md  rereading_rust.md  test.md
scripts/: dev.sh
src/: configuration.rs  frontmatter.rs  helpers.rs  job.rs  lib.rs  main.rs  project.rs
src/routes/: about.rs  blog.rs  game.rs  handle_404.rs  mod.rs  photos.rs  post.rs  projects.rs  read_count.rs  robots.rs  root.rs  rss.rs
src/styles/: styles.css
src/templates/: index.html  layout.html
templates/: about.html  base.html  blog.html  blog_full.html  game.html  header.html  index.html  layout.html  list_of_posts.html  pagination.html  photos.html  post.html  post_full.html  projects.html  work.html
templates/includes/: footer.html  header.html  list_of_posts.html  pagination.html  social.html  work.html
templates/partials/: about.html  blog.html  innerPost.html  post.html
tests/api/: _404.rs  about.rs  blog.rs  health_check.rs  helpers.rs  main.rs  photos.rs  post.rs  project.rs  projects.rs  root.rs
