[package]
name = "bl0g"
version = "0.1.1"
edition = "2024"
default-run = "bl0g"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
comrak = { version = "0.41", default-features = false, features = [
  "bon",
  "syntect",
  "xdg",
] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
features = "0.10.0"
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
serde_yaml = "0.9"
tera = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["serde"] }

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]
